@@ -2,7 +2,7 @@
 #
 # methods.r: generic methods for GDS object
 #
-# Copyright (C) 2015-2016    Xiuwen Zheng
+# Copyright (C) 2015-2018    Xiuwen Zheng
 #
 # This is free software: you can redistribute it and/or modify it
 # under the terms of the GNU Lesser General Public License Version 3 as
